neuron value analyis measurements

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ opencv-python>=4.5.2.52
 torchvision>=0.10.1
 pycocotools~=2.0.2
 torchmetrics~=0.6.0
-detectron2~=0.5
+# detectron2~=0.5
 pulp>=2.5.0
 matplotlib~=3.4.3
 networkx~=2.6.3
