--- a/gnn/config.yaml
+++ b/gnn/config.yaml
@@ -4,19 +4,23 @@ obj_ann_path: "G:/My Drive/Research/data/Clevr_mini/CLEVR_mini_coco_anns.json"
 schema_path: "G:/My Drive/Research/data/Clevr_mini/clevr_attr_map.json"
 attr_names: ["color", "shape", "material", "size"]
 output_dims: [8, 3, 2, 2]
-batch_size: 1
+batch_size: 16
 num_workers: 4
 seed: 980413
+input_channels: 15
+encoder: "rgcn"
+edge_transformer: "types"
+decoder: "random" #" "random" # "results/gnn/clevr/decoder.statedict"
 
 #training configuration
 train_size: 3600
 num_rels: 4
 edge_dim: 4
 dropout_p: 0.6
-learning_rate: 0.002
+learning_rate: 0.005
 max_epochs: 10
 val_every_n_epoch: 1
 precision: 32
 use_sigmoid: True
 dev: False
-desc: "clevr scenes reconstruction"
+desc: "clevr scenes reconstruction with one layer of GNN"
