--- a/correlation/gnn/config.yaml
+++ b/correlation/gnn/config.yaml
@@ -1,9 +1,10 @@
 run_dir: "./correlation/gnn/_output"
 resume_from_checkpoint: null
-obj_ann_path: "C:/git/Clevr-Relational/_clevr_gnn/CLEVR_mini_coco_anns.json"
-schema_path: "C:/git/Clevr-Relational/_clevr_gnn/clevr_attr_map.json"
+obj_ann_path: "C:/git/Clevr-Relational/_clevr_data/_clevr_gnn/CLEVR_mini_coco_anns.json"
+schema_path: "C:/git/Clevr-Relational/_clevr_data/_clevr_gnn/clevr_attr_map.json"
 attr_names: ["color", "shape", "material", "size"]
 output_dims: [8, 3, 2, 2]
+# batch_size: 2
 batch_size: 1
 num_workers: 4
 seed: 980413
@@ -11,7 +12,7 @@ input_channels: 15
 encoder: "gat"
 edge_transformer: "types"
 decoder: "random" # IRRELEVANT FOR ME #" "random" # "results/gnn/clevr/decoder.statedict"
-intermediate_gt: "random" # "features" | "neurons" | "random"
+intermediate_gt: "features" # "features" | "neurons" | "random"
 
 #training configuration
 train_size: 3600
